--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".Ui.test2">
+    tools:context=".Ui.BooksHome">
 
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/bookSlider"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="match_parent"
-        android:layout_height="275dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="50dp"
+        android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.006" />
+        app:tabGravity="center"
+        app:tabIndicatorColor="@color/white"
+        app:tabMode="fixed">
 
-  <!-- <com.google.android.material.tabs.TabLayout
+    </com.google.android.material.tabs.TabLayout>
+
+    <!-- <com.google.android.material.tabs.TabLayout
         android:id="@+id/bookIndicator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,34 +36,23 @@
         app:layout_constraintVertical_bias="0.0"
         app:tabBackground="@drawable/indicator_selector"
         app:tabGravity="center"
-        app:tabIndicatorHeight="0dp"></com.google.android.material.tabs.TabLayout>-->
+        app:tabIndicatorHeight="0dp">
+        </com.google.android.material.tabs.TabLayout>-->
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/popularBooksRecycleView"
-        android:layout_width="398dp"
-        android:layout_height="280dp"
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="408dp"
+        android:layout_height="674dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bookSlider"
-        app:layout_constraintVertical_bias="0.543" />
+        app:layout_constraintTop_toBottomOf="@+id/tabLayout">
 
-    <TextView
-        android:layout_width="200dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="8dp"
-        android:gravity="center"
-        android:text="Popular Books"
-        android:textColor="#ffffff"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/popularBooksRecycleView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.028"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bookSlider"
-        app:layout_constraintVertical_bias="0.522" />
+
+
+    </androidx.viewpager.widget.ViewPager>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
